K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: sdev95/platformservice:latest
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name:  platforms-clusterip-srv
spec: 
  type: ClusterIP
  selector: 
    app: platformservice
  ports: 
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
    - name: platformgrpc
      protocol: TCP
      port: 666
      targetPort: 666
