K8S/platforms-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservices
      protocol: TCP
      port: 80
      targetPort: 80
